# compizfusion-core-packages

./: Makefile.am  README  compiz-gconf.pc.in  configure.ac
debian/: changelog  compiz-dev.install  compiz-dev.links  compiz-mate.install  compiz-mate.links  compiz-plugins.install  compiz-plugins.links  compizfusion-core.install  compizfusion-dev.links  compizfusion-locales.install  compizfusion-mate.install  compizfusion-mate.links  compizfusion-plugins.install  compizfusion-plugins.links  compizfusion.links  control  copyright  gtk-window-decorator.1  libdecoration0-dev.links  libdecoration0.symbols  libdecorationfusion0-dev.links  libdecorationfusion0.symbols  rules  watch
debian/mate_files/: compiz-keybindings.sed  compiz-mate-gtk
debian/patches/: 001-mate-compiz.patch  002-mate-compiz_pot_files.patch  010-disable-child-window-clipping.patch  012_snap-by-default.patch  013-add-cursor-theme-support.patch  014-fix-gtk-window-decorator-no-argb-crash.patch  014_fix-no-border-window-shadow.patch  015_draw_dock_shadows_on_desktop.patch  series  (+14 more)
include/: compiz-core.h
libdecoration/: Makefile.am  decoration.c
metadata/: Makefile.am  core.xml.in.in  gconf.xml.in  matecompat.xml.in  schemas.xslt
plugins/: Makefile.am  gconf.c  glib.c
po/: POTFILES.in  af.po  ar.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  ko.po  lo.po  lt.po  mk.po  mr.po  nb.po  nl.po  or.po  pa.po  (+17 more)
src/: display.c  main.c  option.c
(+11 files in other folders)
